# pq2

./: .gitignore  SECUREVAULT_REPORT.txt  SPEC.md
.github/workflows/: build.yml
.opencode/: graph.json  log-change.py  record-change.py  update-graph.py
.opencode/skills/code-review-graph/: SKILL.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  securevault_crypto.c  securevault_crypto.h
android/app/src/main/java/com/securevault/: MainActivity.kt  SecureVaultApp.kt
android/app/src/main/java/com/securevault/auth/: SecureVaultAuthManager.kt
android/app/src/main/java/com/securevault/crypto/: StrongBoxKeymaster.kt
android/app/src/main/java/com/securevault/ui/components/: GlassComponents.kt
android/app/src/main/java/com/securevault/ui/screens/: AddEntryScreen.kt  EntryDetailScreen.kt  LockScreen.kt  P2PSyncScreen.kt  SettingsScreen.kt  VaultScreen.kt
android/app/src/main/java/com/securevault/ui/theme/: Color.kt  Type.kt
android/app/src/main/res/values/: themes.xml
android/securevault-core/: build.gradle
securevault-core/: Cargo.toml
securevault-core/src/: lib.rs
securevault-core/src/auth/: mod.rs
securevault-core/src/behavior/: mod.rs  tflite_analyzer.rs
securevault-core/src/crypto/: argon2.rs  hybrid.rs  hybrid_crypto.rs  ml_dsa.rs  ml_kem.rs  mod.rs  passkey.rs  poly.rs  rng.rs  sha3.rs  sphincs.rs  totp.rs
securevault-core/src/p2p/: dht_p2p.rs  mod.rs
securevault-core/src/passkey/: mod.rs
securevault-core/src/storage/: mod.rs  vault_format.rs
windows/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  vite.config.ts
windows/src/: App.tsx  commands.rs  index.css  main.rs
windows/src/commands/: LoginScreen.tsx  auth.tsx  secureIpc.ts
